==> analityk/grbl_SAME70/stepper.c <==
#include "grbl.h"
#define DT_SEGMENT (1.0/(ACCELERATION_TICKS_PER_SECOND*60.0)) // min/segment
#define REQ_MM_INCREMENT_SCALAR 1.25
#define RAMP_ACCEL 0
#define RAMP_CRUISE 1
#define RAMP_DECEL 2
#define RAMP_DECEL_OVERRIDE 3
#define PREP_FLAG_RECALCULATE bit(0)
#define PREP_FLAG_HOLD_PARTIAL_BLOCK bit(1)
#define PREP_FLAG_PARKING bit(2)
#define PREP_FLAG_DECEL_OVERRIDE bit(3)
	#define MAX_AMASS_LEVEL 3
	#define AMASS_LEVEL1 (F_CPU/8000) // Over-drives ISR (x2). Defined as F_CPU/(Cutoff frequency in Hz)
	#define AMASS_LEVEL2 (F_CPU/4000) // Over-drives ISR (x4)
	#define AMASS_LEVEL3 (F_CPU/2000) // Over-drives ISR (x8)

void st_wake_up()
{
  // Enable stepper drivers.
	if(bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)){
		avr_var.STEPPERS_DISABLE_PORT |= (STEPPERS_DISABLE_BIT);

		pio_enable_output_write(PIOA, avr_var.STEPPERS_DISABLE_PORT);
		pio_sync_output_write(PIOA, avr_var.STEPPERS_DISABLE_PORT);
		pio_disable_output_write(PIOA, avr_var.STEPPERS_DISABLE_PORT);

	}else{
		avr_var.STEPPERS_DISABLE_PORT &=~(STEPPERS_DISABLE_BIT);

		pio_enable_output_write(PIOA, avr_var.STEPPERS_DISABLE_PORT);
		pio_sync_output_write(PIOA, avr_var.STEPPERS_DISABLE_PORT);
		pio_disable_output_write(PIOA, avr_var.STEPPERS_DISABLE_PORT);
	};

	// Initialize stepper output bits to ensure first ISR call does not step.
	st.step_outbits = step_port_invert_mask;

	// Initialize step pulse timing from settings. Here to ensure updating after re-writing.
	#ifdef STEP_PULSE_DELAY
		//// Set total step pulse time after direction pin set. Ad hoc computation from oscilloscope.
		//st.step_pulse_time = -(((settings.pulse_microseconds+STEP_PULSE_DELAY-2)*TICKS_PER_MICROSECOND) >> 3);
		//// Set delay between direction pin write and step command.
		//OCR0A = -(((settings.pulse_microseconds)*TICKS_PER_MICROSECOND) >> 3);
	#else // Normal operation
		// Set step pulse time. Ad hoc computation from oscilloscope. Uses two's complement.
		st.step_pulse_time = -(((settings.pulse_microseconds-2)*TICKS_PER_MICROSECOND) >> 3);
	#endif

	// Enable Stepper Driver Interrupt
	//TIMSK1 |= (1<<OCIE1A);
	tc_enable_interrupt(TC1, 0, TC_IER_CPCS);
}

void st_go_idle()
{
	// Disable Stepper Driver Interrupt. Allow Stepper Port Reset Interrupt to finish, if active.
	//TIMSK1 &= ~(1<<OCIE1A); // Disable Timer1 interrupt
	//TCCR1B = (TCCR1B & ~((1<<CS12) | (1<<CS11))) | (1<<CS10); // Reset clock to no prescaling.
	tc_disable_interrupt(TC1, 0, TC_IER_CPCS);
	//REG_TC0_CV0 = 0;
	tc_stop(TC1, 0);

	busy = false;

	// Set stepper driver idle state, disabled or enabled, depending on settings and circumstances.
	bool pin_state = false; // Keep enabled.
	if(((settings.stepper_idle_lock_time != 0xff) || sys_rt_exec_alarm || sys.state == STATE_SLEEP) && sys.state != STATE_HOMING){
		// Force stepper dwell to lock axes for a defined amount of time to ensure the axes come to a complete
		// stop and not drift from residual inertial forces at the end of the last movement.
		delay_ms(settings.stepper_idle_lock_time);
		pin_state = true; // Override. Disable steppers.
	}
	if(bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)){
		pin_state = !pin_state;
	}; // Apply pin invert.

	if(pin_state){
		avr_var.STEPPERS_DISABLE_PORT |= STEPPERS_DISABLE_BIT;

		pio_enable_output_write(PIOA, avr_var.STEPPERS_DISABLE_PORT);
		pio_sync_output_write(PIOA, avr_var.STEPPERS_DISABLE_PORT);
		pio_disable_output_write(PIOA, avr_var.STEPPERS_DISABLE_PORT);
	}else{
		avr_var.STEPPERS_DISABLE_PORT &=~ STEPPERS_DISABLE_BIT;

		pio_enable_output_write(PIOA, avr_var.STEPPERS_DISABLE_PORT);
		pio_sync_output_write(PIOA, avr_var.STEPPERS_DISABLE_PORT);
		pio_disable_output_write(PIOA, avr_var.STEPPERS_DISABLE_PORT);
	};
}

void stepper_init()
{
  // Configure step and direction interface pins
  avr_var.STEP_DDR |= STEP_MASK;
  pio_configure(PIOA, PIO_OUTPUT_0, avr_var.STEP_DDR, PIO_PULLUP);

  avr_var.STEPPERS_DISABLE_DDR |= STEPPERS_DISABLE_BIT;
  pio_configure(PIOA, PIO_OUTPUT_0, avr_var.STEPPERS_DISABLE_DDR, PIO_PULLUP);

  avr_var.DIRECTION_DDR |= DIRECTION_MASK;
  pio_configure(PIOA, PIO_OUTPUT_0, avr_var.DIRECTION_DDR, PIO_PULLUP);


  // Configure Timer 1: Stepper Driver Interrupt
  //TCCR1B &= ~(1<<WGM13); // waveform generation = 0100 = CTC
  //clear timer on compare --> use reg_tc1_rc as ocr1a
  //TCCR1B |=  (1<<WGM12);
  //TCCR1A &= ~((1<<WGM11) | (1<<WGM10));
  //TCCR1A &= ~((1<<COM1A1) | (1<<COM1A0) | (1<<COM1B1) | (1<<COM1B0)); // Disconnect OC1 output


  // Configure Timer 0: Stepper Port Reset Interrupt
  //TIMSK0 &= ~((1<<OCIE0B) | (1<<OCIE0A) | (1<<TOIE0)); // Disconnect OC0 outputs and OVF interrupt.
  tc_disable_interrupt(TC0, 0, TC_IER_CPAS | TC_IER_CPCS);


  avr_var.TCCR0A = 0; // Normal operation


  avr_var.TCCR0B = 0; // Disable Timer0 until needed
  tc_stop(TC0, 0);


  //TIMSK0 |= (1<<TOIE0); // Enable Timer0 overflow interrupt
  tc_enable_interrupt(TC0, 0, TC_IER_CPCS);

  #ifdef STEP_PULSE_DELAY
    //TIMSK0 |= (1<<OCIE0A); // Enable Timer0 Compare Match A interrupt
	tc_enable_interrupt(TC0, 0, TC_IER_CPAS | TC_IER_CPCS);
  #endif
}
